# Scorch

./: CMakeLists.txt  README.md
OpenGL/include/glad/: glad.h
res/shaders/: Basic.frag  Basic.vert  Circle.frag
src/: Application.cpp  GLErrorHandler.h  glad.c
src/gui-implementation/: GuiHandler.cpp  GuiHandler.h  GuiWrapper.cpp  GuiWrapper.h
src/physics/: RigidBody.h
src/rendering/: Renderer.cpp  Renderer.h
src/rendering/mesh-objects/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/rendering/shader-objects/: Shader.cpp  Shader.h  Texture.cpp  Texture.h
